สร้างโดยใช้ Colaboratory

--- a/GColab_gTTS_Gen.ipynb
+++ b/GColab_gTTS_Gen.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "GColab-gTTS-Gen.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPeDWR6onM5uIS3CPjskK9m",
+      "authorship_tag": "ABX9TyOTbXocaHuvgYuH4vNKguby",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       "cell_type": "code",
       "source": [
         "#@title <font color=\"yellow\" size=6><< GColab-gTTS-Gen 🔉</font>\n",
-        "Text = \"Hello\" #@param {type:\"string\"}\n",
+        "Text = \"\\u0E2A\\u0E27\\u0E31\\u0E2A\\u0E14\\u0E35\" #@param {type:\"string\"}\n",
         "Lang = \"th\" #@param [\"en\", \"th\"]\n",
         "from gtts import gTTS\n",
         "import os\n",
@@ -68,6 +68,21 @@
       "metadata": {
         "cellView": "form",
         "id": "ucrX4TdnLOO4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title <font color=\"yellow\" size=6><< Download .mp3 ⬇️</font>\n",
+        "\n",
+        "from google.colab import files\n",
+        "files.download('output.mp3')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "2yYNF3i6NTqo"
       },
       "execution_count": null,
       "outputs": []
